basic user CRUD documented
